{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 397,
  "lineage": "e553aa80-8454-a338-96ac-20d59debc56f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a87d2a1833d77f2",
            "arn": "arn:aws:ec2:us-east-1:353142293520:elastic-ip/eipalloc-07a87d2a1833d77f2",
            "domain": "vpc",
            "id": "eipalloc-07a87d2a1833d77f2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-231-44-196.compute-1.amazonaws.com",
            "public_ip": "3.231.44.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-nat-eip-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-nat-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8ae8adce1d7df04",
            "arn": "arn:aws:ec2:us-east-1:353142293520:elastic-ip/eipalloc-0e8ae8adce1d7df04",
            "domain": "vpc",
            "id": "eipalloc-0e8ae8adce1d7df04",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-226-245-84.compute-1.amazonaws.com",
            "public_ip": "54.226.245.84",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-nat-eip-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-nat-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353142293520:internet-gateway/igw-05cd206d689801353",
            "id": "igw-05cd206d689801353",
            "owner_id": "353142293520",
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-igw"
            },
            "vpc_id": "vpc-086ae911b358dc828"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353142293520:loadbalancer/app/minimal-eks-cluster-alb/d38c7a41199d28fa",
            "arn_suffix": "app/minimal-eks-cluster-alb/d38c7a41199d28fa",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "minimal-eks-cluster-alb-492177508.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:353142293520:loadbalancer/app/minimal-eks-cluster-alb/d38c7a41199d28fa",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "minimal-eks-cluster-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0083adcb5d75b47cd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01cdea8be7e865242"
              },
              {
                "subnet_id": "subnet-0288fcf0d6386ffc9"
              }
            ],
            "subnets": [
              "subnet-01cdea8be7e865242",
              "subnet-0288fcf0d6386ffc9"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-086ae911b358dc828",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353142293520:listener/app/minimal-eks-cluster-alb/d38c7a41199d28fa/3368a7854dd0b81c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353142293520:listener/app/minimal-eks-cluster-alb/d38c7a41199d28fa/3368a7854dd0b81c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:353142293520:loadbalancer/app/minimal-eks-cluster-alb/d38c7a41199d28fa",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.api_alb",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353142293520:listener/app/minimal-eks-cluster-alb/d38c7a41199d28fa/a82f3ca3aa7aad9d",
            "certificate_arn": "arn:aws:acm:us-east-1:353142293520:certificate/37b699e1-e816-4a7f-b596-648d3d267e97",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:353142293520:targetgroup/minimal-eks-cluster-tg/750452a4f73d15a3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353142293520:listener/app/minimal-eks-cluster-alb/d38c7a41199d28fa/a82f3ca3aa7aad9d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:353142293520:loadbalancer/app/minimal-eks-cluster-alb/d38c7a41199d28fa",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.api_cert",
            "aws_lb.api_alb",
            "aws_lb_target_group.api",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353142293520:targetgroup/minimal-eks-cluster-tg/750452a4f73d15a3",
            "arn_suffix": "targetgroup/minimal-eks-cluster-tg/750452a4f73d15a3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353142293520:targetgroup/minimal-eks-cluster-tg/750452a4f73d15a3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "minimal-eks-cluster-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-086ae911b358dc828"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a87d2a1833d77f2",
            "association_id": "eipassoc-092409b67c6faa8b2",
            "connectivity_type": "public",
            "id": "nat-0b8d8ee63f1292596",
            "network_interface_id": "eni-0bd770a966fe35baf",
            "private_ip": "172.31.0.152",
            "public_ip": "3.231.44.196",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0288fcf0d6386ffc9",
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-nat-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-nat-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8ae8adce1d7df04",
            "association_id": "eipassoc-0bc9a20903d79efcb",
            "connectivity_type": "public",
            "id": "nat-09f8a05a9bcdbbba9",
            "network_interface_id": "eni-0326c6c1e7ef67f81",
            "private_ip": "172.31.1.65",
            "public_ip": "54.226.245.84",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01cdea8be7e865242",
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-nat-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-nat-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353142293520:route-table/rtb-0c5854536eae1d10d",
            "id": "rtb-0c5854536eae1d10d",
            "owner_id": "353142293520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b8d8ee63f1292596",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-private-rt-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-086ae911b358dc828"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353142293520:route-table/rtb-02ef9300652486a7e",
            "id": "rtb-02ef9300652486a7e",
            "owner_id": "353142293520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09f8a05a9bcdbbba9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-private-rt-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-086ae911b358dc828"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353142293520:route-table/rtb-0844f22732f9ad020",
            "id": "rtb-0844f22732f9ad020",
            "owner_id": "353142293520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05cd206d689801353",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-086ae911b358dc828"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9909f7b772b7e1c",
            "route_table_id": "rtb-0c5854536eae1d10d",
            "subnet_id": "subnet-0e48c8104f537b18c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aaca6b4ba5c0c6a",
            "route_table_id": "rtb-02ef9300652486a7e",
            "subnet_id": "subnet-042a047ea369031a7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048787890b7ee7a98",
            "route_table_id": "rtb-0844f22732f9ad020",
            "subnet_id": "subnet-0288fcf0d6386ffc9"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c24e58c264cdd40",
            "route_table_id": "rtb-0844f22732f9ad020",
            "subnet_id": "subnet-01cdea8be7e865242"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353142293520:security-group/sg-0083adcb5d75b47cd",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Allow outbound to nodes",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "id": "sg-0083adcb5d75b47cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "minimal-eks-cluster-alb-2024121321120609830000000b",
            "name_prefix": "minimal-eks-cluster-alb-",
            "owner_id": "353142293520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-086ae911b358dc828"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353142293520:security-group/sg-009942d3c5077a139",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009942d3c5077a139",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "minimal-eks-cluster-cluster-2024121321120609730000000a",
            "name_prefix": "minimal-eks-cluster-cluster-",
            "owner_id": "353142293520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-cluster-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-086ae911b358dc828"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353142293520:security-group/sg-0bdb21c32fb5b885f",
            "description": "Security group for EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdb21c32fb5b885f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009942d3c5077a139"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach application",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0083adcb5d75b47cd"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "minimal-eks-cluster-nodes-2024121321121033060000000d",
            "name_prefix": "minimal-eks-cluster-nodes-",
            "owner_id": "353142293520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-nodes-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-086ae911b358dc828"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal_communication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "Allow internal VPC communication",
            "from_port": 0,
            "id": "sgrule-2648769554",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bdb21c32fb5b885f",
            "security_group_rule_id": "sgr-0c29cd0c63393898c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.cluster",
            "aws_security_group.nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353142293520:subnet/subnet-0e48c8104f537b18c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e48c8104f537b18c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353142293520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-private-1",
              "kubernetes.io/cluster/minimal-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-private-1",
              "kubernetes.io/cluster/minimal-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-086ae911b358dc828"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353142293520:subnet/subnet-042a047ea369031a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042a047ea369031a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353142293520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-private-2",
              "kubernetes.io/cluster/minimal-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-private-2",
              "kubernetes.io/cluster/minimal-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-086ae911b358dc828"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353142293520:subnet/subnet-0288fcf0d6386ffc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0288fcf0d6386ffc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353142293520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-public-1",
              "kubernetes.io/cluster/minimal-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-public-1",
              "kubernetes.io/cluster/minimal-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-086ae911b358dc828"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353142293520:subnet/subnet-01cdea8be7e865242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cdea8be7e865242",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353142293520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-public-2",
              "kubernetes.io/cluster/minimal-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-public-2",
              "kubernetes.io/cluster/minimal-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-086ae911b358dc828"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353142293520:vpc/vpc-086ae911b358dc828",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-01db15aec9cba7738",
            "default_route_table_id": "rtb-0ea0b54f0df5ab620",
            "default_security_group_id": "sg-09d9557a937faf7f7",
            "dhcp_options_id": "dopt-0be5af4c73e0f6f44",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086ae911b358dc828",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea0b54f0df5ab620",
            "owner_id": "353142293520",
            "tags": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-vpc",
              "kubernetes.io/cluster/minimal-eks-cluster": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "minimal-eks-cluster-vpc",
              "kubernetes.io/cluster/minimal-eks-cluster": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "python_app_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/my-secure-api-service",
            "metadata": [
              {
                "annotations": {
                  "external-dns.alpha.kubernetes.io/hostname": "api.encom.uy, encom.uy",
                  "service.beta.kubernetes.io/aws-load-balancer-backend-protocol": "http",
                  "service.beta.kubernetes.io/aws-load-balancer-scheme": "internet-facing",
                  "service.beta.kubernetes.io/aws-load-balancer-ssl-cert": "arn:aws:acm:us-east-1:353142293520:certificate/37b699e1-e816-4a7f-b596-648d3d267e97",
                  "service.beta.kubernetes.io/aws-load-balancer-ssl-ports": "443",
                  "service.beta.kubernetes.io/aws-load-balancer-type": "alb"
                },
                "generation": 0,
                "name": "my-secure-api-service",
                "namespace": "default",
                "resource_version": "1040",
                "uid": "2182979d-4a2d-430f-9858-730eac4398f4"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.100.240.71",
                "cluster_ips": [
                  "10.100.240.71"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30295,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8000"
                  },
                  {
                    "name": "https",
                    "node_port": 31373,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "8000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "my-secure-api"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a2182979d4a2d430f9858730eac4398f-254478277.us-east-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "aws_acm_certificate.api_cert",
            "aws_cloudwatch_log_group.eks_cluster",
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_service_policy",
            "aws_security_group.cluster",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.auth"
          ]
        }
      ]
    }
  ]
}